fix layout problem

--- a/app/assets/stylesheets/about_us.css.scss
+++ b/app/assets/stylesheets/about_us.css.scss
@@ -1,5 +1,9 @@
 #static-main {
 	display: inline-block;
+  ul, ol{
+    padding-left: 40px;
+    margin: 0;
+  }
   p strong {
     color: #6C2C85;
   }
@@ -96,6 +100,10 @@
       padding-left: 5px;
       margin-top: 2%;
       line-height: 45px;
+      a{
+        color: #6C2C85;
+        text-decoration: none;
+      }
     }
     h1 :first-of-type {
       margin-top: 15px;
